[package]
name = "balance_checker"
version = "0.1.0"
edition = "2021"

[dependencies]
soroban-sdk = "22.0.0"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true
